feat: add events api

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="driver://username:password@hostname:port/database"
+API_PORT=8000
+API_KEY=abc123
